@@ -260,6 +260,9 @@ scan-existing-tiles-tooltip=Scans already placed tiles in the project and update
 sync-map-gen-settings=Sync map gen settings [img=info]
 sync-map-gen-settings-tooltip=Sets map gen settings for all stages to match the current stage, then regenerates all stages.\n\nTo change map settings:\n - Go to editor mode (/editor)\n - Click the "Surfaces" tab\n - Click "Edit map gen settings".\n - Possibly un-check "Generate new chunks with lab tiles".\n - Click this button to regenerate all stages.
 
+set-map-gen-settings-from-planet=Set map settings from seed/planet [img=info]
+set-map-gen-settings-from-planet-tooltip=Sets map gen settings to match a planet/set seed. To further change map settings, see "Sync map gen settings".
+
 delete-project=Delete project
 delete-project-confirmation1=Are you sure you want to delete project __1__?
 delete-project-confirmation2=This cannot be undone.
@@ -283,7 +286,6 @@ set-next-stage-tiles=__1__: setting tiles
 finalize-blueprint-book=Finishing up
 export-blueprint-book=Exporting blueprint book
 
-
 [bp100.gui.entity-info]
 title=Stage info
 
@@ -302,3 +304,9 @@ stage-diff=Updated settings
 reset-prop=Remove this change (sets to previous value)
 apply-to-lower-stage=Apply to previous stage (__1__)
 all-props=<All>
+
+[bp100.gui.set-seed-select]
+title=Set map gen settings
+seed=Seed [img=info]
+seed-tooltip=Seed, on the initial save creation screen, or the Nauvis seed. (Internally, an offset is added to this seed for planets other than Nauvis).
+planet=Planet
