@@ -19,6 +19,7 @@ const defaultPreparedArea = BBox.around({ x: 0, y: 0 }, inTest ? 32 : 5 * 32)
 export function copyMapGenSettings(fromSurface: LuaSurface, toSurface: LuaSurface): void {
   const generateWithLabTiles = fromSurface.generate_with_lab_tiles
   toSurface.generate_with_lab_tiles = generateWithLabTiles
+  toSurface.ignore_surface_conditions = fromSurface.ignore_surface_conditions
   if (!generateWithLabTiles) toSurface.map_gen_settings = fromSurface.map_gen_settings
   if (fromSurface.has_global_electric_network != toSurface.has_global_electric_network) {
     if (fromSurface.has_global_electric_network) toSurface.create_global_electric_network()
